--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
   "name": "mahjong-online",
-  "version": "1.0.0",
-  "description": "Online multiplayer Mahjong game",
+  "version": "7.0.1",
+  "description": "Hong Kong-style Mahjong multiplayer game with AI",
   "main": "src/server.js",
-  "type": "module",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "test": "node test-integration.js",
+    "dev": "nodemon src/server.js"
   },
+  "keywords": [
+    "mahjong",
+    "game",
+    "multiplayer",
+    "websocket"
+  ],
+  "author": "Gregg Dispenza",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
+    "@supabase/supabase-js": "^2.39.0",
     "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
-    "cookie-parser": "^1.4.6",
-    "@supabase/supabase-js": "^2.39.0"
+    "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
