--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mahjong-online",
-  "version": "7.0.1",
+  "version": "7.0.2",
   "description": "Hong Kong-style Mahjong multiplayer game with AI - 100% HKOS Compliant",
   "main": "src/server.js",
   "scripts": {
@@ -20,7 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
@@ -31,6 +31,6 @@
     "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   }
 }
